--- a/Alerty/Classes/Alert.xib
+++ b/Alerty/Classes/Alert.xib
@@ -10,13 +10,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Alert" customModule="Alert" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Alert" customModule="Alerty" customModuleProvider="target">
             <connections>
                 <outlet property="btnCancel" destination="IFH-Fs-30F" id="B62-xn-qDp"/>
                 <outlet property="imageView" destination="W8E-yf-vG7" id="cbm-ts-mre"/>
                 <outlet property="lblDetail" destination="0dA-WL-tKV" id="egL-MN-thb"/>
                 <outlet property="lblTitle" destination="JRl-MB-OQU" id="qgr-Rt-TN5"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="visualEffectView" destination="zaO-Pl-110" id="7om-bz-27C"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -63,7 +64,7 @@
                                             <view opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NPL-B4-IrJ" userLabel="ButtonWrapper">
                                                 <rect key="frame" x="0.0" y="175" width="303" height="60"/>
                                                 <subviews>
-                                                    <button clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IFH-Fs-30F" customClass="AlertButton" customModule="Alert" customModuleProvider="target">
+                                                    <button clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IFH-Fs-30F" customClass="AlertButton" customModule="Alerty" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="0.0" width="303" height="60"/>
                                                         <color key="backgroundColor" red="1" green="0.60784313729999995" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
                                                         <state key="normal" title="OK">
