--- a/Alerty/Classes/Alert.xib
+++ b/Alerty/Classes/Alert.xib
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Alert" customModule="Alerty" customModuleProvider="target">
             <connections>
-                <outlet property="btnCancel" destination="IFH-Fs-30F" id="B62-xn-qDp"/>
+                <outlet property="buttonStack" destination="9cl-4P-iTG" id="7jW-3O-J9M"/>
                 <outlet property="imageView" destination="W8E-yf-vG7" id="cbm-ts-mre"/>
                 <outlet property="lblDetail" destination="0dA-WL-tKV" id="egL-MN-thb"/>
                 <outlet property="lblTitle" destination="JRl-MB-OQU" id="qgr-Rt-TN5"/>
@@ -34,7 +34,7 @@
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TzR-dj-jdY" userLabel="ContentView">
                                 <rect key="frame" x="20" y="200" width="335" height="267"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="zU3-kj-3Xb">
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="zU3-kj-3Xb">
                                         <rect key="frame" x="16" y="16" width="303" height="235"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W8E-yf-vG7">
@@ -61,33 +61,13 @@
                                                     </label>
                                                 </subviews>
                                             </stackView>
-                                            <view opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NPL-B4-IrJ" userLabel="ButtonWrapper">
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="9cl-4P-iTG">
                                                 <rect key="frame" x="0.0" y="175" width="303" height="60"/>
-                                                <subviews>
-                                                    <button clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IFH-Fs-30F" customClass="AlertButton" customModule="Alerty" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="0.0" width="303" height="60"/>
-                                                        <color key="backgroundColor" red="1" green="0.60784313729999995" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <state key="normal" title="OK">
-                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        </state>
-                                                        <connections>
-                                                            <action selector="cancelButtonTapped:" destination="-1" eventType="touchUpInside" id="UjQ-bj-SmL"/>
-                                                        </connections>
-                                                    </button>
-                                                </subviews>
-                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <constraints>
-                                                    <constraint firstItem="IFH-Fs-30F" firstAttribute="top" secondItem="NPL-B4-IrJ" secondAttribute="top" id="CIN-Vo-JMS"/>
-                                                    <constraint firstItem="IFH-Fs-30F" firstAttribute="leading" secondItem="NPL-B4-IrJ" secondAttribute="leading" id="WZH-aF-VpH"/>
-                                                    <constraint firstAttribute="trailing" secondItem="IFH-Fs-30F" secondAttribute="trailing" id="bwb-t9-EgL"/>
-                                                    <constraint firstAttribute="bottom" secondItem="IFH-Fs-30F" secondAttribute="bottom" id="trH-Hx-TxJ"/>
-                                                    <constraint firstAttribute="height" constant="60" id="urG-98-QsL"/>
-                                                </constraints>
-                                            </view>
+                                            </stackView>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="NPL-B4-IrJ" secondAttribute="trailing" id="2hk-kl-JR8"/>
-                                            <constraint firstItem="NPL-B4-IrJ" firstAttribute="leading" secondItem="zU3-kj-3Xb" secondAttribute="leading" id="IJt-nW-Uvr"/>
+                                            <constraint firstItem="9cl-4P-iTG" firstAttribute="leading" secondItem="zU3-kj-3Xb" secondAttribute="leading" id="Ge9-nb-GBI"/>
+                                            <constraint firstAttribute="trailing" secondItem="9cl-4P-iTG" secondAttribute="trailing" id="b41-WI-FNe"/>
                                         </constraints>
                                     </stackView>
                                 </subviews>
@@ -116,8 +96,8 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="zaO-Pl-110" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="0HF-sT-1tm"/>
                 <constraint firstItem="zaO-Pl-110" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="7sO-ci-Ur5"/>
+                <constraint firstAttribute="bottom" secondItem="zaO-Pl-110" secondAttribute="bottom" id="I46-E1-Xgr"/>
                 <constraint firstItem="zaO-Pl-110" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="VBH-5A-jQl"/>
                 <constraint firstItem="zaO-Pl-110" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="otK-lD-60k"/>
             </constraints>
